--- a/modules/online.html
+++ b/modules/online.html
@@ -14,11 +14,8 @@
 									<input name="txt_name2" id="txt_name2" type="text" class="form-control" placeholder="姓名">
 								</div>
 								<div class="col-xs-1  col-sm-2 help-tips ">
-									<span class="glyphicon login-exclamation-sign"></span>* </div>
+									<span class="glyphicon"></span>* </div>
 								<div class="clearfix"></div>
-								<!--<div class="col-xs-12  col-sm-10 col-sm-offset-2 error-tips ">
-                                                         <span class="glyphicon login-exclamation-signred"></span>  请输入您的姓名！
-                                                    </div>-->
 							</div>
 							<div class="form-group">
 								<label for="address" class="col-xs-12 col-sm-2 control-label">专业：</label>
@@ -26,11 +23,8 @@
 									<input id="txt_qq2" type="text" name="txt_qq2" class="form-control" placeholder="专业">
 								</div>
 								<div class="col-xs-1  col-sm-2 help-tips ">
-									<span class="glyphicon login-exclamation-sign"></span> </div>
+									<span class="glyphicon"></span> </div>
 								<div class="clearfix"></div>
-								<!--<div class="col-xs-12  col-sm-10 col-sm-offset-2 error-tips ">
-                                                         <span class="glyphicon login-exclamation-signred"></span>  请输入详细地址！
-                                                    </div>-->
 							</div>
 							<div class="form-group">
 								<label for="address" class="col-xs-12 col-sm-2 control-label">地区：</label>
@@ -38,11 +32,8 @@
 									<input id="txt_where2" type="text" name="txt_where2" class="form-control" placeholder="地区">
 								</div>
 								<div class="col-xs-1  col-sm-2 help-tips ">
-									<span class="glyphicon login-exclamation-sign"></span>* </div>
+									<span class="glyphicon"></span>* </div>
 								<div class="clearfix"></div>
-								<!--<div class="col-xs-12  col-sm-10 col-sm-offset-2 error-tips ">
-                                                         <span class="glyphicon login-exclamation-signred"></span>  请输入详细地址！
-                                                    </div>-->
 							</div>
 							<div class="form-group">
 								<label for="phone" class="col-xs-12 col-sm-2 control-label">手机：</label>
@@ -50,11 +41,8 @@
 									<input id="txt_tel2" type="text" name="txt_tel2" class="form-control" placeholder="手机">
 								</div>
 								<div class="col-xs-1  col-sm-2 help-tips ">
-									<span class="glyphicon login-exclamation-sign"></span>* </div>
+									<span class="glyphicon"></span>* </div>
 								<div class="clearfix"></div>
-								<!--<div class="col-xs-12  col-sm-10 col-sm-offset-2 error-tips ">
-                                                         <span class="glyphicon login-exclamation-signred"></span>  请输入联系电话！
-                                                    </div>-->
 							</div>
 							<div class="form-group">
 								<label for="email" class="col-xs-12 col-sm-2 control-label">E-mail：</label>
@@ -62,11 +50,8 @@
 									<input id="txt_email2" type="text" name="txt_email2" class="form-control" placeholder="请输入E-mail">
 								</div>
 								<div class="col-xs-1  col-sm-2 help-tips ">
-									<span class="glyphicon login-exclamation-sign"></span> </div>
+									<span class="glyphicon"></span> </div>
 								<div class="clearfix"></div>
-								<!--<div class="col-xs-12  col-sm-10 col-sm-offset-2 error-tips ">
-                                                         <span class="glyphicon login-exclamation-signred"></span>  请输入E-mail！
-                                                    </div>-->
 							</div>
 							<div class="form-group">
 								<div class="col-xs-12  col-sm-8  col-sm-offset-2 ">
