调整，添加留言板页面

--- a/modules/academy.html
+++ b/modules/academy.html
@@ -14,7 +14,7 @@
 			<div class="bd">
 				<div class="tempWrap" style="overflow:hidden; position:relative; height:194px">
 					<ul class="picList" style="height: 1261px; position: relative; padding: 0px; margin: 0px; top: -873px;">
-						<li class="clone" style="height: 64px;">
+						<li class="clone" style="height: 64px;" academy-finish>
 							<div class="pic">
 								<a href="wlview.asp?id=667"><img src="upload/201762920334020648.jpg"></a>
 							</div>
