--- a/modules/infoview.html
+++ b/modules/infoview.html
@@ -219,97 +219,6 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-12 col-sm-12 col-md-3 ">
-			<div class="apply" style="padding:0 0 15px 0;">
-				<!--S 代码-->
-				<div class="TB-focus" style="margin:0 auto">
-					<div class="hd">
-						<ul>
-
-							<li class="on"></li>
-
-						</ul>
-					</div>
-					<div class="bd">
-						<div class="tempWrap" style="overflow:hidden; position:relative; width:250px">
-							<ul style="width: 750px; position: relative; overflow: hidden; padding: 0px; margin: 0px; left: -250px;">
-								<li class="clone" style="float: left; width: 250px;">
-									<a href="http://www.tufanedu.com" target="_blank"><img src="upload/201762916193829036.jpg"></a>
-								</li>
-
-								<li style="float: left; width: 250px;">
-									<a href="http://www.tufanedu.com" target="_blank"><img src="upload/201762916193829036.jpg"></a>
-								</li>
-
-								<li class="clone" style="float: left; width: 250px;">
-									<a href="http://www.tufanedu.com" target="_blank"><img src="upload/201762916193829036.jpg"></a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<script type="text/javascript">
-					jQuery(".TB-focus").slide({
-						mainCell: ".bd ul",
-						effect: "leftLoop",
-						autoPlay: true,
-						delayTime: 200
-					});
-				</script>
-				<!--E 代码-->
-			</div>
-
-			<div class="asside_box1 hidden-sm">
-				<div class="contact_box">
-					<a href="http://wpa.qq.com/msgrd?v=3&amp;uin=936907843&amp;site=www.cactussoft.cn&amp;menu=yes" target="_blank"><img class="contactimg" src="images/contact_img.png"></a>
-					<div class="wechat">
-						<img src="images/wechat1.jpg">
-						<p>扫一扫获取报名资料</p>
-					</div>
-					<div class="online">
-						<p>免费通话<br> 咨询热线：
-						</p>
-						<p style="color:#f4bc35 ; font-family:Arial, Helvetica, sans-serif; font-size:16px; line-height:29px;">13270871699</p>
-
-						<div class="myqq">
-							<a href="http://wpa.qq.com/msgrd?v=3&amp;uin=936907843&amp;site=www.cactussoft.cn&amp;menu=yes" target="_blank">卢老师</a>
-							<a href="http://wpa.qq.com/msgrd?v=3&amp;uin=2050841545&amp;site=www.cactussoft.cn&amp;menu=yes" target="_blank">宋老师</a>
-						</div>
-					</div>
-				</div>
-				<div class="education_box">
-					<div class="lan1">
-						<p>学籍查询</p>
-					</div>
-					<div class="row">
-						<a class="col-xs-6 col-sm-6 " style="padding-right:5px;" href="http://www.chsi.com.cn/xlcx/lscx/query.do" target="_blank">
-							<dl class="education_item bg1">
-								<dt><img src="images/school_icon1.png"></dt>
-								<dd>专升本</dd>
-							</dl>
-						</a>
-						<a class="col-xs-6 col-sm-6" style="padding-left:5px;" href="http://www.chsi.com.cn/xlcx/lscx/query.do" target="_blank">
-							<dl class="education_item bg2">
-								<dt><img src="images/school_icon2.png"></dt>
-								<dd>高起专</dd>
-							</dl>
-						</a>
-						<a class="col-xs-6 col-sm-6" style="padding-right:5px;" href="http://www.chsi.com.cn/xlcx/lscx/query.do" target="_blank">
-							<dl class="education_item bg3">
-								<dt><img src="images/school_icon3.png"></dt>
-								<dd>高起本</dd>
-							</dl>
-						</a>
-						<a class="col-xs-6 col-sm-6" style="padding-left:5px;" href="#">
-							<dl class="bg4">
-								<dt>学历成就一切</dt>
-								<dd>......</dd>
-							</dl>
-						</a>
-					</div>
-				</div>
-
-			</div>
-		</div>
+		<qc-outside></qc-outside>
 	</div>
 </div>
