--- a/message-board.html
+++ b/message-board.html
@@ -12,19 +12,21 @@
 		<script src="js/jquery-1.11.3.min.js" type="text/javascript" charset="utf-8"></script>
 		<style>
 			body,h1,html,li,ul{padding:0;margin:0}
-			body{background:url(images/message-board.png) fixed 100%/100% 100% no-repeat;color:#2003fb}
-			.w1000{width:50%;margin:0 auto;background-color:rgba(140,236,235,.63)}
-			.qc-title{margin-top:16%;border-radius:10px;padding:10px}
+			body{background:url(images/message-board.png) fixed 100%/100% 100% no-repeat;color:#2003fb;border-top: 0.1px solid transparent;}
+			.w50{width:50%;margin:0 auto;background-color:rgba(140,236,235,.63)}
+			.qc-title{margin-top:14%;border-radius:10px;padding:10px}
 			.qc-title h1{font-size:28px;text-align:center;padding:5px;text-shadow:5px 5px 3px #d6b2b2;letter-spacing:22px}
 			.row{padding:5px}
 			.row div{padding-top:5px}
 			.row span{line-height:26px;text-align:center;height:26px}
 			.btn{background-color:#0193DE;color:#fff}
 			input,textarea{color: #000000;}
+			.suss{color: #f00;text-align: center;background-color: rgba(189, 255, 99, 0.62);display: none;position: fixed; border-radius: 5px;}
 		</style>
 	</head>
 	<body>
-		<section class="w1000 qc-title container">
+		<div class="suss">报名成功，我们会尽快与您联系，请静候佳音。</div>
+		<section class="w50 qc-title container">
 			<h1>你的梦想是什么？</h1>
 			<div class="row">
 				<span class="col-md-1"></span>
@@ -55,6 +57,76 @@
 		</section>
 	</body>
 	<script type="text/javascript">
-		$(function(){var back=$("#btn-back").on("click",function(){if(navigator.userAgent.indexOf("MSIE")>0){if(navigator.userAgent.indexOf("MSIE 6.0")>0){window.opener=null;window.close()}else{window.open('','_top');window.top.close()}}else if(navigator.userAgent.indexOf("Firefox")>0){window.opener=null;window.open('','_self');window.close();window.location.href='about:blank '}else{window.opener=null;window.open('','_self');window.close()}});var sub=$("#btn-sub").on("click",function(){var obj={};obj.dream=$.trim($("#dream").val());obj.username=$.trim($("[name='username']").eq(0).val());obj.usertel=$.trim($("[name='usertel']").eq(0).val());obj.userqq=$.trim($("[name='userqq']").eq(0).val());obj.useremail=$.trim($("[name='useremail']").eq(0).val());obj.useraddress=$.trim($("[name='useraddress']").eq(0).val());if(obj.dream===""){alert("亲，您还没有说出你的梦想哦！");$("#dream").focus();return}if(obj.usertel===''){alert("电话号码不能为空");return}if(!(/^1[3|5][0-9]\d{4,8}$/.test(obj.usertel))){alert("亲，若想获取及时信息，请输入正确的手机号");$("[name='usertel']").focus();return}if(obj.userqq&&!(/[0-9]/.test(obj.userqq))){alert("亲，QQ号码不应该是数字吗？");$("[name='userqq']").focus();return}$.ajax({type:"post",url:"data_handling.php?act=target_user",data:obj,success:function(){alert("提交成功，我们会尽快与您取得联系。")},error:function(e){alert("服务器繁忙，请稍后重试，给您带来的不便敬请谅解。。。")}})})});
+		$(function() {
+	var back = $("#btn-back").on("click",function(){
+		closeWin();
+	});
+	var sub = $("#btn-sub").on("click", function() {
+		var obj = {};
+		obj.dream = $.trim($("#dream").val());
+		obj.username = $.trim($("[name='username']").eq(0).val());
+		obj.usertel = $.trim($("[name='usertel']").eq(0).val());
+		obj.userqq = $.trim($("[name='userqq']").eq(0).val());
+		obj.useremail = $.trim($("[name='useremail']").eq(0).val());
+		obj.useraddress = $.trim($("[name='useraddress']").eq(0).val());
+		if (obj.dream === "") {
+			alert("亲，您还没有说出你的梦想哦！");
+			$("#dream").focus();
+			return
+		}
+		if (obj.usertel === '') {
+			alert("电话号码不能为空");
+			return
+		}
+		if (!(/^1[3|5][0-9]\d{4,8}$/.test(obj.usertel))) {
+			alert("亲，若想获取及时信息，请输入正确的手机号");
+			$("[name='usertel']").focus();
+			return
+		}
+		if (obj.userqq && !(/[0-9]/.test(obj.userqq))) {
+			alert("亲，QQ号码不应该是数字吗？");
+			$("[name='userqq']").focus();
+			return
+		}
+		$.ajax({
+			type: "post",
+			url: "data_handling.php?act=target_user",
+			data: obj,
+			success: function() {
+				$("#dream").val("");
+				$("input").val("");
+				$(".suss").animate({
+				    fontSize: "20px",
+				    opacity: 'show',
+				    width:"100%"
+				  }, 1000 );
+				$("#btn-back").html("关闭页面");
+			},
+			error: function(e) {
+				alert("服务器繁忙，请稍后重试，给您带来的不便敬请谅解。。。")
+			}
+		})
+	})
+	function closeWin(){
+		if (navigator.userAgent.indexOf("MSIE") > 0) {
+			if (navigator.userAgent.indexOf("MSIE 6.0") > 0) {
+				window.opener = null;
+				window.close()
+			} else {
+				window.open('', '_top');
+				window.top.close()
+			}
+		} else if (navigator.userAgent.indexOf("Firefox") > 0) {
+			window.opener = null;
+			window.open('', '_self');
+			window.close();
+			window.location.href = 'about:blank '
+		} else {
+			window.opener = null;
+			window.open('', '_self');
+			window.close();
+		}
+	}
+});
 </script>
 </html>
