--- a/in.html
+++ b/in.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh" ng-app="qcedu">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -22,7 +22,7 @@
 		<script src="js/slick.min.js" type="text/javascript" charset="utf-8"></script>	
 	</head>
 
-	<body id="wrapper" ng-app="qcedu">
+	<body id="wrapper">
 		<div class="mm-page mm-slideout" id="mm-0">
 			<qc-header></qc-header>
 			<qc-bigbanner></qc-bigbanner>
