--- a/zm/modules/add-adm.html
+++ b/zm/modules/add-adm.html
@@ -1,34 +1,43 @@
 <div class="row-fluid addadm">
+	<div class="addmsg row-fluid {{addmsg.bg}} clearfix" ng-hide="addmsg.flag">
+		<p class="col-xs-12 text-center {{addmsg.color}}">{{addmsg.msg}}</p>
+		<p class="col-xs-12 text-center"><a href="#{{addmsg.id}}" ng-show="addmsg.id">查看信息</a>&nbsp;&nbsp;<a href="#">查看列表</a></p>
+	</div>
 	<ul class="nav nav-tabs">
       <li class="active"><a href="#home" data-toggle="tab">请填写账号资料</a></li>
     </ul>
-    <div class="row add-adm-from">
-    	<div class="col-xs-offset-1 row inputbox">
-    		<span class="col-xs-1">账号：</span>
-    		<input type="text" name="admname" id="admname" value="" class="col-xs-3" />
+    <form class="row add-adm-from" name="myform" novalidate>
+    	<div class="row inputbox">
+    		<label for="account" class="col-xs-offset-1 col-xs-1">账号：</label>
+    		<input type="text" id="account" name="account" ng-model="user.account" ng-trim="true" class="col-xs-3" required/>
+    		<span class="col-xs-2"><i class="fa fa-asterisk"></i><span ng-show="verify.account">&nbsp;&nbsp;此项不能为空</span></span>
     	</div>
-    	<div class="col-xs-offset-1 row inputbox">
-    		<span class="col-xs-1">密码：</span>
-    		<input type="text" name="admname" id="admname" value="" class="col-xs-3" />
+    	<div class="row inputbox">
+    		<label for="password" class="col-xs-offset-1 col-xs-1">密码：</label>
+    		<input type="text" id="password" ng-model="user.password" ng-trim="true" class="col-xs-3" />
+    		<span class="col-xs-2"><i class="fa fa-asterisk"></i><span ng-show="verify.password">&nbsp;&nbsp;此项不能为空</span></span>
     	</div>
-    	<div class="col-xs-offset-1 row inputbox">
-    		<span class="col-xs-1">姓名：</span>
-    		<input type="text" name="admname" id="admname" value="" class="col-xs-3" />
+    	<div class="row inputbox">
+    		<label for="username" class="col-xs-offset-1 col-xs-1">姓名：</label>
+    		<input type="text" id="username" ng-model="user.username" ng-trim="true" class="col-xs-3" />
+    		<span class="col-xs-2"><i class="fa fa-asterisk"></i><span ng-show="verify.username">&nbsp;&nbsp;此项不能为空</span></span>
     	</div>
-    	<div class="col-xs-offset-1 row inputbox">
-    		<span class="col-xs-1">手机：</span>
-    		<input type="text" name="admname" id="admname" value="" class="col-xs-3" />
+    	<div class="row inputbox">
+    		<label for="tel" class="col-xs-offset-1 col-xs-1">手机：</label>
+    		<input type="text" id="tel" ng-model="user.tel" ng-trim="true" class="col-xs-3" />
+    		<span class="col-xs-2" ng-show="verify.tel">手机号格式不对</span>
     	</div>
-    	<div class="col-xs-offset-1 row inputbox">
-    		<span class="col-xs-1">邮箱：</span>
-    		<input type="text" name="admname" id="admname" value="" class="col-xs-3" />
+    	<div class="row inputbox">
+    		<label for="email" class="col-xs-offset-1 col-xs-1">邮箱：</label>
+    		<input type="text" id="email" ng-model="user.email" ng-trim="true" class="col-xs-3" />
+    		<span class="col-xs-2" ng-show="verify.email">邮箱格式不对</span>
     	</div>
-    	<div class="col-xs-offset-1 row">
-    		<span class="col-xs-1">描述：</span>
-    		<textarea name="" class="col-xs-3"></textarea>
+    	<div class="row">
+    		<label for="depict" class="col-xs-offset-1 col-xs-1">描述：</label>
+    		<textarea id="depict" ng-model="user.depict" ng-trim="true" class="col-xs-3"></textarea>
     	</div>
-    	<div class="col-xs-offset-2 row btnbox">
-			<div class="btn btn-primary">添加</div>
+    	<div class="row btnbox">
+			<button ng-click="add(user)" class="col-xs-offset-2 btn btn-primary">添加</button>
     	</div>
-    </div>
+    </form>
 </div>
