--- a/zm/modules/modify-adm.html
+++ b/zm/modules/modify-adm.html
@@ -1,49 +1,34 @@
-<div class="row-fluid">
-	<div class="bb-alert alert alert-info" style="display: none;">
-		<span>操作成功</span>
-	</div>
-	<!-- START 以上内容不需更改，保证该TPL页内的标签匹配即可 -->
-
-	<div class="well">
-		<ul class="nav nav-tabs">
-			<li class="active">
-				<a href="#home" data-toggle="tab">请修改账号资料</a>
-			</li>
-		</ul>
-
-		<div id="myTabContent" class="tab-content">
-			<div class="tab-pane active in" id="home">
-
-				<form id="tab" method="post" action="" autocomplete="off">
-
-					<label>登录名 <span class="label label-info">不可修改</span></label>
-					<input type="text" name="user_name" value="admin" class="input-xlarge" readonly="true">
-					<label>密码 <span class="label label-important">如不修改请留空</span></label>
-					<input type="password" name="password" value="" class="input-xlarge">
-					<label>姓名</label>
-					<input type="text" name="real_name" value="SomewhereYu" class="input-xlarge" required="true">
-					<label>手机</label>
-					<input type="text" name="mobile" value="13737119664" class="input-xlarge" required="" pattern="\d{11}">
-					<label>邮件</label>
-					<input type="email" name="email" value="admin@osadmin.org" class="input-xlarge" required="true">
-					<label>描述</label>
-					<textarea name="user_desc" rows="3" class="input-xlarge">初始的超级管理员!</textarea>
-					<label>账号组</label>
-
-					<select name="user_group" class="input-xlarge" id="DropDownTimezone" disabled="true">
-						<option value="1" selected="selected" class="input-xlarge option" id="DropDownTimezone-0">超级管理员组</option>
-						<option value="10" class="input-xlarge option" id="DropDownTimezone-1">aa</option>
-						<option value="11" class="input-xlarge option" id="DropDownTimezone-2">1</option>
-					</select>
-
-					<div class="btn-toolbar">
-						<button type="submit" class="btn btn-primary"><strong>提交</strong></button>
-						<div class="btn-group"></div>
-					</div>
-				</form>
+<div class="row-fluid modify-adm">
+	<form novalidate="novalidate" name="adm">
+		<div class="row-fluid col-xs-offset-1 clearfix">
+			<label for="username" class="col-xs-1">姓名：</label>
+	  		<input type="text" ng-change="newAdm(adm)" class="col-xs-3" id="username" ng-model="adm.username">	
+		</div>
+		<div class="row-fluid col-xs-offset-1 clearfix">			
+			<label for="account" class="col-xs-1">账号：</label>
+			<input type="text" ng-change="newAdm(adm)" class="col-xs-3" id="account" ng-model="adm.account">
+		</div>
+  		<div class="row-fluid col-xs-offset-1 clearfix">			
+  			<label for="tel" class="col-xs-1">手机：</label>
+  			<input type="text" ng-change="newAdm(adm)" class="col-xs-3" id="tel" ng-model="adm.tel">
+		</div>
+  		<div class="row-fluid col-xs-offset-1 clearfix">			
+  			<label for="email" class="col-xs-1">邮箱：</label>
+  			<input type="text" ng-change="newAdm(adm)" class="col-xs-3" id="email" ng-model="adm.email">
+		</div>
+  		<div class="row-fluid col-xs-offset-1">			
+			<input type="submit" ng-disabled="pop" class="col-xs-1 col-xs-offset-3" ng-click="subFn()" value="修改"/>
+		</div>
+	</form>
+	<div class="pop alert alert-warning" ng-show="pop">
+		<h3>确定修改吗？</h3>
+		<div class="row btn-box">
+			<div class="col-xs-6">
+				<button ng-click="cancelFn()" class="btn btn btn-primary">取消</button>
+			</div>
+			<div class="col-xs-6">
+				<button ng-click="confirmFn(adm.id)" class="btn btn btn-primary">确认</button>				
 			</div>
 		</div>
 	</div>
-	<!-- END 以下内容不需更改，请保证该TPL页内的标签匹配即可 -->
-
 </div>
