--- a/modules/banner.html
+++ b/modules/banner.html
@@ -1,4 +1,4 @@
 <div class="banner">
-    <div><a href="javascript:void(0)"><img src="upload/banner_2.jpg" alt=""></a></div>
-    <div><a href="javascript:void(0)"><img src="upload/banner_2.jpg" alt=""></a></div>
+    <div><a href="javascript:void(0)"><img src="uploads/banner_2.jpg" alt=""></a></div>
+    <div><a href="javascript:void(0)"><img src="uploads/banner_2.jpg" alt=""></a></div>
 </div>
