--- a/zm/menu/homeMenu.html
+++ b/zm/menu/homeMenu.html
@@ -1,9 +1,12 @@
 <ul>
 	<li>
-		<a ui-sref="articles" ui-sref-active="current">活动&宣传图</a>
+		<a ui-sref="activity" ui-sref-active="current">活动</a>
 	</li>
 	<li>
-		<a ui-sref="addarticle" ui-sref-active="current">接待老师</a>
+		<a ui-sref="bannerpic" ui-sref-active="current">宣传图</a>
+	</li>
+	<li>
+		<a ui-sref="teachers" ui-sref-active="current">首页热线</a>
 	</li>
 	<li>
 		<a ui-sref="uploadimage" ui-sref-active="current">图片上传</a>
