--- a/zm/menu/homeMenu.html
+++ b/zm/menu/homeMenu.html
@@ -1,9 +1,9 @@
 <ul>
-	<li>
+	<!--<li>
 		<a ui-sref="activity" ui-sref-active="current">活动</a>
-	</li>
+	</li>-->
 	<li>
-		<a ui-sref="bannerpic" ui-sref-active="current">宣传图</a>
+		<a ui-sref="bannerpic" ui-sref-active="current">大轮播图</a>
 	</li>
 	<li>
 		<a ui-sref="teachers" ui-sref-active="current">首页热线</a>
