--- a/zm/modules/add-article.html
+++ b/zm/modules/add-article.html
@@ -2,17 +2,26 @@
 	<div class="add-article-title">
 		<input type="text" placeholder="请输入文章标题" />
 	</div>
-	<div class="add-article-class col-xs-offset-8">
+	<div class="add-article-class col-xs-offset-6">
 		<span class="article-class-span">分类：</span>
 		<select class="add-article-se">
-		  <option value="0">Volvo</option>
-		  <option value="1">Saab</option>
-		  <option value="2">Opel</option>
-		  <option value="3">Audi</option>
+		  <option value="0">未分类</option>
+		  <option value="1">教务通知</option>
+		  <option value="2">报考指南</option>
+		  <option value="3">教育新闻</option>
+		  <option value="3">职业资格</option>
 		</select>
+		<span class="pull-right btn btn-danger clearcon">清空内容</span>
 		<!--<span class="btn btn-primary"><i class="fa fa-plus"></i>分类</span>-->
 	</div>
     <div id="editor-trigger" ng-model="editorContent" contenteditable="true">
+    </div>
+    <div class="row-fluid subtool text-center clearfix">
+    	<div class="col-xs-2 row">
+    		<div class="col-xs-6 btn btn-primary">保存草稿</div>
+    		<div class="col-xs-5 btn btn-primary pull-right">预览</div>
+    	</div>
+    	<div class="col-xs-1 pull-right btn btn-primary">提交</div>
     </div>
     <hr>
     <p><b>以下是编辑器的内容：</b></p>
